histoires/histoires-api.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '4'
    field.cattle.io/creatorId: user-5dn6d
    field.cattle.io/publicEndpoints: '[{"addresses":["\u003cnil\u003e"],"port":80,"protocol":"HTTP","serviceName":"histoires:ingress-be5313ebb9c80f028e8e54327454f290","ingressName":"histoires:histoires","hostname":"histoires.xyz","path":"/api","allNodes":true}]'
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-histoires-histoires-api
  name: histoires-api
  namespace: histoires
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-histoires-histoires-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: '2018-12-11T18:48:02Z'
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-histoires-histoires-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - three
      containers:
      - image: blueforest/histoires-api:latest
        imagePullPolicy: Always
        name: histoires-api
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /time.data/indexes/mergeables/wiki
          name: vol1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /var/lib/histoires
          type: ''
        name: vol1
