histoires/histoires-web.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
    field.cattle.io/creatorId: user-5dn6d
    field.cattle.io/publicEndpoints: '[{"addresses":["51.77.137.98"],"port":80,"protocol":"HTTP","serviceName":"histoires:ingress-5d2e64692bcb6e759c61fb068a1d6b0b","ingressName":"histoires:histoires","hostname":"histoires.xyz","allNodes":true}]'
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-histoires-histoires-web
  name: histoires-web
  namespace: histoires
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-histoires-histoires-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: '2018-12-11T18:34:17Z'
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-histoires-histoires-web
    spec:
      containers:
      - image: blueforest/time.front:1.0.0
        imagePullPolicy: Always
        name: histoires-web
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
