histoires/histoires-api.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:histoires:histoires-api"]'
    workload.cattle.io/targetWorkloadIdNoop: 'true'
    workload.cattle.io/workloadPortBased: 'true'
  labels:
    cattle.io/creator: norman
  name: histoires-api
  namespace: histoires
  ownerReferences:
  - apiVersion: apps/v1beta2
    controller: true
    kind: deployment
    name: histoires-api
    uid: 33b5dcb7-fd72-11e8-8468-fa163e4f813e
spec:
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-histoires-histoires-api
  sessionAffinity: None
  type: ClusterIP
