histoires/histoires-web.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:histoires:histoires-web"]'
    workload.cattle.io/targetWorkloadIdNoop: 'true'
    workload.cattle.io/workloadPortBased: 'true'
  labels:
    cattle.io/creator: norman
  name: histoires-web
  namespace: histoires
  ownerReferences:
  - apiVersion: apps/v1beta2
    controller: true
    kind: deployment
    name: histoires-web
    uid: 5f1f754e-fd73-11e8-8468-fa163e4f813e
spec:
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-histoires-histoires-web
  sessionAffinity: None
  type: ClusterIP
