histoires/ingress-5d2e64692bcb6e759c61fb068a1d6b0b.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:histoires:histoires-web"]'
  labels:
    cattle.io/creator: norman
  name: ingress-5d2e64692bcb6e759c61fb068a1d6b0b
  namespace: histoires
  ownerReferences:
  - apiVersion: v1beta1/extensions
    controller: true
    kind: Ingress
    name: histoires
    uid: 245ecf09-0137-11e9-8468-fa163e4f813e
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    workloadID_ingress-5d2e64692bcb6e759c61fb068a1d6b0b: 'true'
  sessionAffinity: None
  type: ClusterIP
